--- a/pages/halava.html
+++ b/pages/halava.html
@@ -7,13 +7,13 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/pure-min.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/grids-responsive-min.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
-        <link rel="stylesheet" href="onfin.github.io/theme/css/main.css" />
-        <link href="onfin.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Full Atom Feed" />
+        <link rel="stylesheet" href="https://onfin.github.io/theme/css/main.css" />
+        <link href="https://onfin.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Full Atom Feed" />
 </head>
 <body>
 
     <div class="navigation pure-menu pure-menu-horizontal">
-        <a href="onfin.github.io/" class="pure-menu-link">Житейские воззрения пана Семушельского</a>
+        <a href="/" class="pure-menu-link">Житейские воззрения пана Семушельского</a>
         <ul class="pure-menu-list">
             <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
             <li class="pure-menu-item"><a href="/pages/literacy" class="pure-menu-link">Грамотность</a></li>
@@ -212,7 +212,7 @@
             <div class="pure-u-1">
                 <div class="pure-g poster-info">
                     <div class="pure-u-3-4">
-                        <h3 class="author-name"><a href="onfin.github.io/"></a></h3>
+                        <h3 class="author-name"><a href="https://onfin.github.io/"></a></h3>
                         <p class="author-description">
                         </p>
                     </div>
@@ -230,7 +230,7 @@
 <!--
     <footer class="index-footer">
 
-        <a href="onfin.github.io/" title="Житейские воззрения пана Семушельского">Житейские воззрения пана Семушельского</a>
+        <a href="https://onfin.github.io/" title="Житейские воззрения пана Семушельского">Житейские воззрения пана Семушельского</a>
         <a href="/blog">Сиюминутное</a></li>
         <a href="/pages/literacy">Грамотность</a></li>
         <a href="/pages/halava">Халява</a></li>
