--- a/literacy/moneytransfer.html
+++ b/literacy/moneytransfer.html
@@ -127,6 +127,7 @@
 <p>Внести деньги через банкомат. Тут мы снова сталкиваемся с неодновременностью пополнения баланса карты и зачисления средств на счёт. Последнее обычно происходит после инкассации банкомата (на следующий день или через день). Если деньги вносились через банкомат чужого банка — к этому добавляется ещё и время на формирование и прохождение межбанковского перевода. В течение этого времени действуют все оговорки касательно переводов через платёжные системы.</p>
 </li>
 </ol>
+<p><a id="transit"></a></p>
 <h1 id="_5">О транзитных операциях</h1>
 <p>ЦБ в последнее время лютует по поводу выявления обналички, финансирования терроризма, теневых финансовых потоков и прочих неучтённых доходов граждан. Соответственно, и банки вынуждены за характером переводов следить и подозрительные вещи пресекать. Одна из подозрительных вещей — <em>транзит</em>, когда свежепоступившие деньги тут же переводятся куда-то дальше по цепочке. Допустим, друг вернул вам долг на одну карточку, вы с неё переправили деньги в другой банк (чтобы, допустим, комиссии за исходящий перевод избежать), и тут же отправили другому другу (тоже, может быть, долг вернуть). Поздравляю вас — вы цепочка <em>транзитчиков</em>, и схлопотать блокировку можете все трое (я думаю, так истории с блокировками за 1000 рублей и появляются). Придётся перед банками объясняться зачем так сложно и нет ли тут цели запутать следственные органы. Потому что такой ваш перевод между банками с их точки зрения экономически бессмысленен (они вообще не воспринимают комиссии за переводы как нечто, что уважающий себя человек будет оптимизировать), а значит злонамерен.</p>
 <p>Поэтому таких транзитных переводов надо стараться избегать. Для этого нужно:</p>
@@ -144,6 +145,9 @@
             <div class="pagination">
                     <div class="post-meta pure-g">
                         <div class="pure-u-1-2 left">
+                        </div>
+                        <div class="pure-u-1-2 center">
+                                  <a href="https://onfin.github.io/pages/literacy"> &uarr; Грамотность &uarr; </a>
                         </div>
                         <div class="pure-u-1-2 right">
                         </div>
