--- a/literacy/notaboutmoney.html
+++ b/literacy/notaboutmoney.html
@@ -96,6 +96,9 @@
                     <div class="post-meta pure-g">
                         <div class="pure-u-1-2 left">
                         </div>
+                        <div class="pure-u-1-2 center">
+                                  <a href="https://onfin.github.io/pages/literacy"> &uarr; Грамотность &uarr; </a>
+                        </div>
                         <div class="pure-u-1-2 right">
                         </div>
                     </div>
