--- a/pages/literacy.html
+++ b/pages/literacy.html
@@ -44,6 +44,7 @@
 <h1 id="_2">Практика</h1>
 <ol>
 <li><a href="https://onfin.github.io/literacy/moneytransfer">Денежные переводы</a></li>
+<li><a href="https://onfin.github.io/literacy/basebank">Выбор базового банка</a></li>
 </ol>
         <hr>
     </div>
@@ -52,6 +53,8 @@
             <div class="pagination">
                     <div class="post-meta pure-g">
                         <div class="pure-u-1-2 left">
+                        </div>
+                        <div class="pure-u-1-2 center">
                         </div>
                         <div class="pure-u-1-2 right">
                         </div>
