--- a/pages/halava.html
+++ b/pages/halava.html
@@ -210,6 +210,8 @@
                     <div class="post-meta pure-g">
                         <div class="pure-u-1-2 left">
                         </div>
+                        <div class="pure-u-1-2 center">
+                        </div>
                         <div class="pure-u-1-2 right">
                         </div>
                     </div>
