--- a/pages/sources.html
+++ b/pages/sources.html
@@ -129,6 +129,8 @@
                     <div class="post-meta pure-g">
                         <div class="pure-u-1-2 left">
                         </div>
+                        <div class="pure-u-1-2 center">
+                        </div>
                         <div class="pure-u-1-2 right">
                         </div>
                     </div>
