--- a/pages/halava.html
+++ b/pages/halava.html
@@ -104,6 +104,7 @@
 <p>Подумываю сменить на кредитную <a href="https://travel.alfabank.ru/cards">AlfaTravel</a>, которая даёт примерно те же плюшки,
 но без дискретного списания миль (и вообще позволяет возмещать только часть стоимости билета).</p>
 <p>Плюшки за <strong><a href="https://www.tinkoff.ru/sl/91fWXmyTilE">оформление</a></strong>: 1000 миль (мне — 1500).</p>
+<p><a id="rgscard"></a></p>
 <h1 id="-"><a href="https://www.rgsbank.ru/personal/cards/best/">Отличная карта Росгосстрах-банка</a></h1>
 <p>Продуктовая карта.</p>
 <p>Почему пользуюсь:</p>
@@ -208,11 +209,11 @@
     <footer>
             <div class="pagination">
                     <div class="post-meta pure-g">
-                        <div class="pure-u-1-2 left">
+                        <div class="pure-u-1-3 left">
                         </div>
-                        <div class="pure-u-1-2 center">
+                        <div class="pure-u-1-3 center">
                         </div>
-                        <div class="pure-u-1-2 right">
+                        <div class="pure-u-1-3 right">
                         </div>
                     </div>
                 </div>
