--- a/pages/literacy.html
+++ b/pages/literacy.html
@@ -43,8 +43,14 @@
 </ol>
 <h1 id="_2">Практика</h1>
 <ol>
-<li><a href="https://onfin.github.io/literacy/moneytransfer">Денежные переводы</a></li>
 <li><a href="https://onfin.github.io/literacy/basebank">Выбор базового банка</a></li>
+<li><a href="https://onfin.github.io/literacy/cardscalc">Использование и расчёт банковских карт</a></li>
+</ol>
+<h1 id="_3">Справочник</h1>
+<ol>
+<li><a href="https://onfin.github.io/literacy/moneytransfer">Денежные переводы</a></li>
+<li><a href="https://onfin.github.io/literacy/deposits">Размещение средств в банках</a></li>
+<li><a href="https://onfin.github.io/literacy/cards">Банковские карты</a></li>
 </ol>
         <hr>
     </div>
@@ -52,11 +58,11 @@
     <footer>
             <div class="pagination">
                     <div class="post-meta pure-g">
-                        <div class="pure-u-1-2 left">
+                        <div class="pure-u-1-3 left">
                         </div>
-                        <div class="pure-u-1-2 center">
+                        <div class="pure-u-1-3 center">
                         </div>
-                        <div class="pure-u-1-2 right">
+                        <div class="pure-u-1-3 right">
                         </div>
                     </div>
                 </div>
