--- a/pages/sources.html
+++ b/pages/sources.html
@@ -61,6 +61,7 @@
 </ul>
 </div>
 <h1 id="_1">Практическая информация</h1>
+<p><a id="cards"></a></p>
 <h2 id="_2">Банковские карты, вклады, спецпредложения</h2>
 <ul>
 <li><a href="http://hranidengi.ru/">Храни деньги</a> — блог с регулярными подробными обзорами банковских карт, сервисов и всего что около.</li>
@@ -127,11 +128,11 @@
     <footer>
             <div class="pagination">
                     <div class="post-meta pure-g">
-                        <div class="pure-u-1-2 left">
+                        <div class="pure-u-1-3 left">
                         </div>
-                        <div class="pure-u-1-2 center">
+                        <div class="pure-u-1-3 center">
                         </div>
-                        <div class="pure-u-1-2 right">
+                        <div class="pure-u-1-3 right">
                         </div>
                     </div>
                 </div>
