--- a/literacy/notaboutmoney.html
+++ b/literacy/notaboutmoney.html
@@ -95,6 +95,7 @@
             <div class="pagination">
                     <div class="post-meta pure-g">
                         <div class="pure-u-1-3 left">
+                                  <a href="https://onfin.github.io/literacy/intro"> &lt;&lt; Введение </a>
                         </div>
                         <div class="pure-u-1-3 center">
                                   <a href="https://onfin.github.io/pages/literacy"> &uarr; Грамотность &uarr; </a>
