--- a/literacy/notaboutmoney.html
+++ b/literacy/notaboutmoney.html
@@ -101,6 +101,7 @@
                                   <a href="https://onfin.github.io/pages/literacy"> &uarr; Грамотность &uarr; </a>
                         </div>
                         <div class="pure-u-1-3 right">
+                                  <a href="https://onfin.github.io/literacy/reserves"> Формирование резервов &gt;&gt; </a>
                         </div>
                     </div>
                 </div>
