--- a/pages/literacy.html
+++ b/pages/literacy.html
@@ -47,6 +47,7 @@
 <ol>
 <li><a href="https://onfin.github.io/literacy/basebank">Выбор базового банка</a></li>
 <li><a href="https://onfin.github.io/literacy/cardscalc">Использование и расчёт банковских карт</a></li>
+<li><a href="https://onfin.github.io/literacy/credits">Математика кредитов</a></li>
 </ol>
 <h1 id="_3">Справочник</h1>
 <ol>
