--- a/pages/literacy.html
+++ b/pages/literacy.html
@@ -54,6 +54,7 @@
 <li><a href="https://onfin.github.io/literacy/moneytransfer">Денежные переводы</a></li>
 <li><a href="https://onfin.github.io/literacy/deposits">Размещение средств в банках</a></li>
 <li><a href="https://onfin.github.io/literacy/cards">Банковские карты</a></li>
+<li><a href="https://onfin.github.io/literacy/instruments">Краткий обзор инструментов сбережения</a></li>
 </ol>
         <hr>
     </div>
