--- a/pages/literacy.html
+++ b/pages/literacy.html
@@ -45,6 +45,7 @@
 </ol>
 <h1 id="_2">Практика</h1>
 <ol>
+<li><a href="https://onfin.github.io/literacy/howto">Пенсия своими силами. Пошаговое руководство</a></li>
 <li><a href="https://onfin.github.io/literacy/basebank">Выбор базового банка</a></li>
 <li><a href="https://onfin.github.io/literacy/cardscalc">Использование и расчёт банковских карт</a></li>
 <li><a href="https://onfin.github.io/literacy/credits">Математика кредитов</a></li>
