--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
+
+<meta property="og:locale" content="ru" />
+
+
+    <meta property="og:type" content="website" />
+<meta property="og:title" content="Шолом алейхем!" />
+<meta property="og:url" content="https://onfin.github.io" />
+
+
         <meta name="yandex-verification" content="6e8ec33a4b1a2db2" />
 
 
