--- a/pages/calculators.html
+++ b/pages/calculators.html
@@ -10,6 +10,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
+        <meta name="description" content="На странице собраны ссылки на различные мои финансовые калькуляторы." />
+        <meta name="keywords" content="банковские карты, вклады, кредиты, личные финансы, инвестиции, пассивный доход, калькуляторы, расчёт выгоды" />
+
+<meta property="og:locale" content="ru" />
+
+    <meta property="og:description" content="На странице собраны ссылки на различные мои финансовые калькуляторы." />
+
+    <meta property="og:type" content="article" />
+        <meta property="og:article:modified_time" content="2019-09-22" />
+<meta property="og:title" content="Калькуляторы" />
+<meta property="og:url" content="https://onfin.github.io/pages/calculators" />
+
+
 
 </head>
 <body>
