--- a/calculators/credits.html
+++ b/calculators/credits.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/grids-responsive-min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
+    <script defer type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
         <meta name="description" content="Калькуляторы для расчёта, сравнения и выбра различных схем выплаты кредитов. Насколько выгоднее или невыгоднее взять кредит и вложить по сравнению с постепенным накоплением." />
         <meta name="keywords" content="калькулятор, кредит, аннуитетная схема, дифференцированная схема, сравнение схем погашения, кредит и инфляция" />
@@ -106,7 +107,6 @@
 <h1 id="_4">Занять и вложить</h1>
 <div id="borrowAndInvestSchedule"></div>
 
-<p></p>
 <script type="text/javascript">
     function toggleCollapsible(elem) {
         elem.classList.toggle("active");
@@ -323,8 +323,6 @@
             extra: (Math.pow(capitalWithCredit/capitalWithSavings, 12.0/data.months)-1)*100};
     }
 </script>
-
-<p></p>
         <hr>
     </div>
 
