--- a/pages/calculators.html
+++ b/pages/calculators.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/grids-responsive-min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
+    <script defer type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
         <meta name="description" content="На странице собраны ссылки на различные мои финансовые калькуляторы." />
         <meta name="keywords" content="банковские карты, вклады, кредиты, личные финансы, инвестиции, пассивный доход, калькуляторы, расчёт выгоды" />
@@ -18,7 +19,7 @@
     <meta property="og:description" content="На странице собраны ссылки на различные мои финансовые калькуляторы." />
 
     <meta property="og:type" content="article" />
-        <meta property="og:article:modified_time" content="2019-09-22" />
+        <meta property="og:article:modified_time" content="2019-09-26" />
 <meta property="og:title" content="Калькуляторы" />
 <meta property="og:url" content="https://onfin.github.io/pages/calculators" />
 
