Restyling and calculators.

--- a/calculators/calculators.html
+++ b/calculators/calculators.html
@@ -2,20 +2,24 @@
 
 <html lang="ru">
 <head>
-    <title>2018-12-31</title>
+    <title>Калькуляторы</title>
     <meta charset="utf-8" />
-    <link rel="canonical" href="/blog/2018-12-31" />
+    <link rel="canonical" href="/calculators/calculators" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
+        <meta name="description" content="На странице собраны ссылки на различные мои финансовые калькуляторы." />
+        <meta name="keywords" content="банковские карты, вклады, кредиты, личные финансы, инвестиции, пассивный доход, калькуляторы, расчёт выгоды" />
 
 <meta property="og:locale" content="ru" />
 
+    <meta property="og:description" content="На странице собраны ссылки на различные мои финансовые калькуляторы." />
 
-    <meta property="og:type" content="website" />
-<meta property="og:title" content="2018-12-31" />
-<meta property="og:url" content="https://onfin.github.io/blog/2018-12-31" />
+    <meta property="og:type" content="article" />
+        <meta property="og:article:modified_time" content="2019-10-13" />
+<meta property="og:title" content="Калькуляторы" />
+<meta property="og:url" content="https://onfin.github.io/calculators/calculators" />
 
 
 
@@ -32,7 +36,7 @@
                         <li class="pure-menu-item"><a href="/pages/literacy" class="pure-menu-link">Грамотность</a></li>
                         <li class="pure-menu-item"><a href="/pages/halava" class="pure-menu-link">Халява</a></li>
                         <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="pure-menu-item"><a href="/pages/calculators" class="pure-menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -44,13 +48,28 @@
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
         <header>
-            <h1>2018-12-31</h1>
+            <h1>Калькуляторы</h1>
             <div class="meta">
+                    <p class="description">На странице собраны ссылки на различные мои финансовые калькуляторы.</p>
             </div>
         </header>
 
         <div class="content">
-            <p>К НГ закончил-таки фундаментальную заметку о <a href="/literacy/reserves">резервах (и страховании)</a>. Т.к. здесь — вся соль и суть личных финансов, прошу обратной связи.</p>
+            <ol>
+<li><a href="/calculators/cards">Расчёт выгоды от использования банковских карт</a><ul>
+<li>Потери от хранения денег в наличности и на счетах под низкий процент</li>
+<li>Доход от кэшбэка и процента на остаток по дебетовой карте</li>
+<li>Доход от кэшбэка и льготного кредита по кредитной карте</li>
+</ul>
+</li>
+<li><a href="/calculators/credits">Кредиты</a><ul>
+<li>Аннуитетная схема</li>
+<li>Дифференцированная схема</li>
+<li>Погашение в конце срока</li>
+<li>Занять и вложить</li>
+</ul>
+</li>
+</ol>
         </div>
     </article>
 </div>
