--- a/literacy/intro.html
+++ b/literacy/intro.html
@@ -4,12 +4,10 @@
 <head>
     <title>Введение</title>
     <meta charset="utf-8" />
+    <link rel="canonical" href="/literacy/intro" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/pure-min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/grids-responsive-min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
-    <script defer type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
         <meta name="description" content="Для кого этот сайт. Зачем нужно накапливать финансовый капитал. Историческая доходность акций. Расчёт итоговой доходности разового вложения, регулярных вложений. Сколько нужно сберегать, чтобы получить нужный доход. Через сколько лет можно достичь финансовой независимости." />
         <meta name="keywords" content="финансовая грамотность, сбережения, инвестиции, пенсия, риски, финансовый капитал, сложный процент, расчёт" />
@@ -20,24 +18,31 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-16" />
-        <meta property="og:article:modified_time" content="2019-09-26" />
+        <meta property="og:article:modified_time" content="2019-10-11" />
 <meta property="og:title" content="Введение" />
 <meta property="og:url" content="https://onfin.github.io/literacy/intro" />
 
+
+        <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
 
 </head>
 <body>
     <header>
         <nav class="pure-menu pure-menu-horizontal">
-            <a href="/" class="pure-menu-link">Житейские воззрения пана Семушельского</a>
-            <ul class="pure-menu-list">
-                <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                <li class="pure-menu-item"><a href="/pages/literacy" class="pure-menu-link">Грамотность</a></li>
-                <li class="pure-menu-item"><a href="/pages/halava" class="pure-menu-link">Халява</a></li>
-                <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                <li class="pure-menu-item"><a href="/pages/calculators" class="pure-menu-link">Калькуляторы</a></li>
-            </ul>
+            <label class="menu-container">
+                <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                <input type="checkbox" />
+                <span class="checkmark"><i>&equiv;</i></span>
+                <ul class="menu">
+                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
+                        <li class="pure-menu-item"><a href="/pages/literacy" class="pure-menu-link">Грамотность</a></li>
+                        <li class="pure-menu-item"><a href="/pages/halava" class="pure-menu-link">Халява</a></li>
+                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
+                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                </ul>
+            </label>
         </nav>
     </header>
 
@@ -50,7 +55,7 @@
             <h1>Введение</h1>
             <div class="meta">
                     <p class="description">Для кого этот сайт. Зачем нужно накапливать финансовый капитал. Историческая доходность акций. Расчёт итоговой доходности разового вложения, регулярных вложений. Сколько нужно сберегать, чтобы получить нужный доход. Через сколько лет можно достичь финансовой независимости.</p>
-                        <p> Обновлено: 2019-09-26 </p>
+                        <p> Обновлено: 2019-10-11 </p>
             </div>
         </header>
 
@@ -148,25 +153,34 @@
 <script type="text/javascript"></script>
         </div>
     </article>
-
-    <hr>
-
-    <footer>
-        <div class="pagination">
-            <div class="post-meta pure-g">
-                <div class="pure-u-1-3 left">
-                </div>
-                <div class="pure-u-1-3 center">
-                            <a href="/pages/literacy"> &uarr; Грамотность &uarr; </a>
-                </div>
-                <div class="pure-u-1-3 right">
-                            <a href="/literacy/notaboutmoney"> Бережливость — это не про деньги &gt;&gt; </a>
-                </div>
-            </div>
-        </div>
-    </footer>
 </div>
 </div>
     </main>
+
+    <footer>
+<div class="pure-g">
+<div class="pagination pure-u-1 pure-u-lg-9-12">
+    <div class="pure-g">
+    <div class="pure-u-1-3 left">
+    </div>
+    <div class="pure-u-1-3 center">
+                <a href="/literacy"> &uarr; Грамотность &uarr; </a>
+                <a href="/pages/literacy"> &uarr; Грамотность &uarr; </a>
+    </div>
+    <div class="pure-u-1-3 right">
+                <a href="/literacy/notaboutmoney"> Бережливость — это не про деньги &gt;&gt; </a>
+    </div>
+    </div>
+</div>
+</div>
+
+        <div class="disclaimer">
+            <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
+
+            <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ.</p>
+
+            <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.</p>
+        </div>
+    </footer>
 </body>
 </html>
