--- a/literacy/literacy.html
+++ b/literacy/literacy.html
@@ -2,20 +2,24 @@
 
 <html lang="ru">
 <head>
-    <title>2018-12-31</title>
+    <title>Грамотность</title>
     <meta charset="utf-8" />
-    <link rel="canonical" href="/blog/2018-12-31" />
+    <link rel="canonical" href="/literacy/literacy" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
+        <meta name="description" content="Заметки по финансовой грамотности в систематическом виде." />
+        <meta name="keywords" content="финансовая грамотность, сбережения, инвестиции" />
 
 <meta property="og:locale" content="ru" />
 
+    <meta property="og:description" content="Заметки по финансовой грамотности в систематическом виде." />
 
-    <meta property="og:type" content="website" />
-<meta property="og:title" content="2018-12-31" />
-<meta property="og:url" content="https://onfin.github.io/blog/2018-12-31" />
+    <meta property="og:type" content="article" />
+        <meta property="og:article:modified_time" content="2019-10-13" />
+<meta property="og:title" content="Грамотность" />
+<meta property="og:url" content="https://onfin.github.io/literacy/literacy" />
 
 
 
@@ -32,7 +36,7 @@
                         <li class="pure-menu-item"><a href="/pages/literacy" class="pure-menu-link">Грамотность</a></li>
                         <li class="pure-menu-item"><a href="/pages/halava" class="pure-menu-link">Халява</a></li>
                         <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                        <li class="pure-menu-item"><a href="/pages/calculators" class="pure-menu-link">Калькуляторы</a></li>
                 </ul>
             </label>
         </nav>
@@ -44,13 +48,33 @@
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
         <header>
-            <h1>2018-12-31</h1>
+            <h1>Грамотность</h1>
             <div class="meta">
+                    <p class="description">Заметки по финансовой грамотности в систематическом виде.</p>
             </div>
         </header>
 
         <div class="content">
-            <p>К НГ закончил-таки фундаментальную заметку о <a href="/literacy/reserves">резервах (и страховании)</a>. Т.к. здесь — вся соль и суть личных финансов, прошу обратной связи.</p>
+            <h2 id="_1">Основы</h2>
+<ol>
+<li><a href="/literacy/intro">Введение</a></li>
+<li><a href="/literacy/notaboutmoney">Бережливость — это не про деньги</a></li>
+<li><a href="/literacy/reserves">Формирование резервов</a></li>
+</ol>
+<h2 id="_2">Практика</h2>
+<ol>
+<li><a href="/literacy/howto">Пенсия своими силами. Пошаговое руководство</a></li>
+<li><a href="/literacy/basebank">Выбор базового банка</a></li>
+<li><a href="/literacy/cardscalc">Использование и расчёт банковских карт</a></li>
+<li><a href="/literacy/credits">Математика кредитов</a></li>
+</ol>
+<h2 id="_3">Справочник</h2>
+<ol>
+<li><a href="/literacy/moneytransfer">Денежные переводы</a></li>
+<li><a href="/literacy/deposits">Размещение средств в банках</a></li>
+<li><a href="/literacy/cards">Банковские карты</a></li>
+<li><a href="/literacy/instruments">Краткий обзор инструментов сбережения. Во вкладывать деньги и во что — нет</a></li>
+</ol>
         </div>
     </article>
 </div>
