--- a/literacy/speculation.html
+++ b/literacy/speculation.html
@@ -2,9 +2,9 @@
 
 <html lang="ru">
 <head>
-    <title>2018-12-31</title>
+    <title>Как зарабатывать на спекуляциях. Много</title>
     <meta charset="utf-8" />
-    <link rel="canonical" href="/blog/2018-12-31" />
+    <link rel="canonical" href="/literacy/speculation" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
@@ -14,8 +14,8 @@
 
 
     <meta property="og:type" content="website" />
-<meta property="og:title" content="2018-12-31" />
-<meta property="og:url" content="https://onfin.github.io/blog/2018-12-31" />
+<meta property="og:title" content="Как зарабатывать на спекуляциях. Много" />
+<meta property="og:url" content="https://onfin.github.io/literacy/speculation" />
 
 
 
@@ -44,13 +44,14 @@
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
         <header>
-            <h1>2018-12-31</h1>
+            <h1>Как зарабатывать на спекуляциях. Много</h1>
             <div class="meta">
+                        <p> Обновлено: 2019-09-26 </p>
             </div>
         </header>
 
         <div class="content">
-            <p>К НГ закончил-таки фундаментальную заметку о <a href="/literacy/reserves">резервах (и страховании)</a>. Т.к. здесь — вся соль и суть личных финансов, прошу обратной связи.</p>
+            
         </div>
     </article>
 </div>
@@ -58,6 +59,20 @@
     </main>
 
     <footer>
+<div class="pure-g">
+<div class="pagination pure-u-1 pure-u-lg-9-12">
+    <div class="pure-g">
+    <div class="pure-u-1-3 left">
+    </div>
+    <div class="pure-u-1-3 center">
+                <a href="/literacy"> &uarr; Грамотность &uarr; </a>
+                <a href="/pages/literacy"> &uarr; Грамотность &uarr; </a>
+    </div>
+    <div class="pure-u-1-3 right">
+    </div>
+    </div>
+</div>
+</div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
