--- a/pages/halava.html
+++ b/pages/halava.html
@@ -4,12 +4,10 @@
 <head>
     <title>Халява</title>
     <meta charset="utf-8" />
+    <link rel="canonical" href="/pages/halava" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/pure-min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/grids-responsive-min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
-    <script defer type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
         <meta name="description" content="Здесь собраны всякие сервисы, от которых я получаю некоторую выгоду. К некоторым приложены реферальные ссылки (выделены жирным в конце описания), за регистрацию по которым каждый из нас получит по небольшой халявной плюшке." />
         <meta name="keywords" content="карты, вклады, брокеры, кэшбэк, реферальные программы" />
@@ -20,7 +18,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-01" />
-        <meta property="og:article:modified_time" content="2019-10-08" />
+        <meta property="og:article:modified_time" content="2019-10-13" />
 <meta property="og:title" content="Халява" />
 <meta property="og:url" content="https://onfin.github.io/pages/halava" />
 
@@ -30,14 +28,18 @@
 <body>
     <header>
         <nav class="pure-menu pure-menu-horizontal">
-            <a href="/" class="pure-menu-link">Житейские воззрения пана Семушельского</a>
-            <ul class="pure-menu-list">
-                <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                <li class="pure-menu-item"><a href="/pages/literacy" class="pure-menu-link">Грамотность</a></li>
-                <li class="pure-menu-item"><a href="/pages/halava" class="pure-menu-link">Халява</a></li>
-                <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
-                <li class="pure-menu-item"><a href="/pages/calculators" class="pure-menu-link">Калькуляторы</a></li>
-            </ul>
+            <label class="menu-container">
+                <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                <input type="checkbox" />
+                <span class="checkmark"><i>&equiv;</i></span>
+                <ul class="menu">
+                        <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
+                        <li class="pure-menu-item"><a href="/pages/literacy" class="pure-menu-link">Грамотность</a></li>
+                        <li class="pure-menu-item"><a href="/pages/halava" class="pure-menu-link">Халява</a></li>
+                        <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
+                        <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
+                </ul>
+            </label>
         </nav>
     </header>
 
@@ -50,13 +52,12 @@
             <h1>Халява</h1>
             <div class="meta">
                     <p class="description">Здесь собраны всякие сервисы, от которых я получаю некоторую выгоду. К некоторым приложены реферальные ссылки (выделены жирным в конце описания), за регистрацию по которым каждый из нас получит по небольшой халявной плюшке.</p>
-                        <p> Обновлено: 2019-10-08 </p>
+                        <p> Обновлено: 2019-10-13 </p>
             </div>
         </header>
 
         <div class="content">
-            <p>Здесь собраны всякие сервисы, от которых я получаю некоторую выгоду. К некоторым приложены реферальные ссылки (выделены жирным в конце описания), за регистрацию по которым каждый из нас получит по небольшой халявной плюшке.</p>
-<div class="toc">
+            <div class="toc">
 <ul>
 <li><a href="#tinkoff-black">Tinkoff Black</a></li>
 <li><a href="#tinkoff-allairlines">Tinkoff AllAirlines</a></li>
@@ -178,23 +179,19 @@
 <p>Тема с промокодами и приглашениями на разные прочие сервисы/банки ко взаимной выгоде есть на <a href="http://www.banki.ru/forum/?PAGE_NAME=list&amp;FID=27">форуме Склянок</a>.</p>
         </div>
     </article>
-
-    <hr>
-
-    <footer>
-        <div class="pagination">
-            <div class="post-meta pure-g">
-                <div class="pure-u-1-3 left">
-                </div>
-                <div class="pure-u-1-3 center">
-                </div>
-                <div class="pure-u-1-3 right">
-                </div>
-            </div>
-        </div>
-    </footer>
 </div>
 </div>
     </main>
+
+    <footer>
+
+        <div class="disclaimer">
+            <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
+
+            <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ.</p>
+
+            <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.</p>
+        </div>
+    </footer>
 </body>
 </html>
