/pages/literacy -> /literacy

--- a/literacy/deposits.html
+++ b/literacy/deposits.html
@@ -37,7 +37,7 @@
                 <span class="checkmark"><i>&equiv;</i></span>
                 <ul class="menu">
                         <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
-                        <li class="pure-menu-item"><a href="/pages/literacy" class="pure-menu-link">Грамотность</a></li>
+                        <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
                         <li class="pure-menu-item"><a href="/pages/halava" class="pure-menu-link">Халява</a></li>
                         <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
                         <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
